持明法洲轮播图管理OK

--- a/cmfz-admin/src/main/webapp/themes/IconExtension.css
+++ b/cmfz-admin/src/main/webapp/themes/IconExtension.css
@@ -26,7 +26,7 @@
 .icon-20130406014311476_easyicon_net_16{background:url('IconsExtension/20130406014311476_easyicon_net_16.png') no-repeat center center;}
 .icon-20130406014314162_easyicon_net_16{background:url('IconsExtension/20130406014314162_easyicon_net_16.png') no-repeat center center;}
 .icon-20130406015709810_easyicon_net_16{background:url('IconsExtension/20130406015709810_easyicon_net_16.png') no-repeat center center;}
-.icon-20130406125519344_easyicon_net_16{background:url('IconsExtension/20130406125519344_easyicon_net_16.png') no-repeat center center;}
+.icon-load{background:url('IconsExtension/load.png') no-repeat center center;}
 .icon-20130406125647919_easyicon_net_16{background:url('IconsExtension/20130406125647919_easyicon_net_16.png') no-repeat center center;}
 .icon-20130406125821654_easyicon_net_16{background:url('IconsExtension/20130406125821654_easyicon_net_16.png') no-repeat center center;}
 .icon-20130408025545236_easyicon_net_30{background:url('IconsExtension/20130408025545236_easyicon_net_30.png') no-repeat center center;}
